# CalorieCounter

./: CMakeLists.txt
AppDriver/: CMakeLists.txt  main.cpp
AppManager/: AppManager.cpp  AppManager.h  CMakeLists.txt  CalorieTrackerManager.cpp  CalorieTrackerManager.h
CalorieCalculator/: CMakeLists.txt  CalorieCalculator.cpp  CalorieCalculator.h
CalorieHistory/: CMakeLists.txt  CalorieHistory.cpp  CalorieHistory.h
CalorieTracker/: CMakeLists.txt  CalorieTrackerFacade.cpp  CalorieTrackerFacade.h  CalorieTrackerManager.cpp  CalorieTrackerManager.h
CalorieTracker/CalorieCalculator/: CMakeLists.txt  CalorieCalculator.cpp  CalorieCalculator.h
CalorieTracker/CalorieHistory/: CMakeLists.txt  CalorieHistory.h  CalorieHistoryFacade.cpp  CalorieHistoryFacade.h
CalorieTracker/CalorieHistory/DBInterface/: CMakeLists.txt  DevHistoryDBInterface.cpp  DevHistoryDBInterface.h  HistoryDBInterfaceFactory.cpp  HistoryDBInterfaceFactory.h  RealHistoryDBInterface.cpp  RealHistoryDBInterface.h
CalorieTracker/CalorieHistory/Model/: CMakeLists.txt  History.cpp  History.h
CalorieTracker/CalorieHistory/Service/: CMakeLists.txt  CalorieHistoryService.cpp  CalorieHistoryService.h  FoodLibraryService.h
CalorieTracker/FoodLibrary/: CMakeLists.txt  FoodItem.h  FoodLibrary.cpp  FoodLibrary.h  FoodLibraryFacade.cpp  FoodLibraryFacade.h
CalorieTracker/FoodLibrary/DBInterface/: CMakeLists.txt  DevLibraryDBInterface.cpp  DevLibraryDBInterface.h  FoodLibraryDBInterfaceFactory.cpp  FoodLibraryDBInterfaceFactory.h  RealLibraryDBInterface.cpp  RealLibraryDBInterface.h
CalorieTracker/FoodLibrary/Model/: CMakeLists.txt  FoodItem.cpp  FoodItem.h  FoodItemHandler.cpp  FoodItemHandler.h
CalorieTracker/FoodLibrary/Service/: CMakeLists.txt  FoodLibraryService.cpp  FoodLibraryService.h  WeightTrackerService.cpp
CalorieTrackerManager/: CMakeLists.txt  CalorieTrackerManager.cpp  CalorieTrackerManager.h
DBInterface/: CMakeLists.txt  DBInterface.cpp  DBInterface.h  DBInterfaceFactory.cpp  DBInterfaceFactory.h  DevHistoryDBInterface.cpp  DevHistoryDBInterface.h  DevLibraryDBInterface.cpp  DevLibraryDBInterface.h  FileIODBInterface.cpp  FileIODBInterface.h  RealDBInterface.h  RealHistoryDBInterface.cpp  RealHistoryDBInterface.h  RealLibraryDBInterface.cpp  RealLibraryDBInterface.h
FoodItem/: CMakeLists.txt  FoodItem.cpp  FoodItem.h  FoodLibrary.h
FoodLibrary/: CMakeLists.txt  FoodLibrary.cpp  FoodLibrary.h
SavedHistory/: HistoryHandler.h  SavedHistory.cpp  SavedHistory.h
UserInterface/: CMakeLists.txt  UserInterface.cpp  UserInterface.h
Utility/: CMakeLists.txt  Utility.cpp  Utility.h
WeightTracker/: CMakeLists.txt  WeightTracker.cpp  WeightTracker.h  WeightTrackerFacade.cpp  WeightTrackerFacade.h
WeightTracker/DBInterface/: CMakeLists.txt  DevWeightTrackerDBInterface.cpp  DevWeightTrackerDBInterface.h  RealWeightTrackerDBInterface.cpp  RealWeightTrackerDBInterface.h  WeightTrackerDBInterface.h  WeightTrackerDBInterfaceFactory.cpp  WeightTrackerDBInterfaceFactory.h  postGreSQLWeightTrackerDBInterface.cpp  postGreSQLWeightTrackerDBInterface.h
WeightTracker/Model/: CMakeLists.txt  WeightEntry.h
WeightTracker/Parser/: CMakeLists.txt  WeightEntryParser.cpp  WeightEntryParser.h
WeightTracker/Service/: CMakeLists.txt  WeightTrackerService.cpp  WeightTrackerService.h
docker/: docker-compose.yml
