cmake_minimum_required(VERSION 3.10)

project(CalorieApp)

# Add subdirectories
add_subdirectory(CalorieTrackerManager)
add_subdirectory(CalorieCalculator)
add_subdirectory(CalorieHistory)
add_subdirectory(FoodLibrary)
add_subdirectory(AppDriver)
add_subdirectory(DBInterface)
add_subdirectory(UserInterface)
add_subdirectory(WeightTracker)
add_subdirectory(Utility)

